# ryangraham.github.io

./: 404.html  Makefile  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
blog/: index.html
blog/2024/09/13/first-post/: index.html
blog/archive/2024/: index.html
docs/blog/: .authors.yml
docs/blog/posts/: firstpost.md
notes/: initial-setup.txt
search/: search_index.json
site/: 404.html
site/blog/: index.html
site/blog/archive/2024/: index.html
site/search/: search_index.json
