[tool.poetry]
name = "ryangraham-github-io"
version = "0.1.0"
description = ""
authors = ["RyanG <ryangraham@gmail.com>"]
readme = "README.md"
packages = [{include = "ryangraham"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
